0.99.8
- a bugfix about P4A_Date::unformat was fixed (1468679 - string padding)
- Polish translation was updated
- PEAR was updated to 1.4.9

0.99.7
- added a "clone" function to emulate php5 cloning system
- a php5 warning bug was solved
- P4A_DB_Source::setQuery() now automatically generates the counting query
- bug n. 1467199 on P4A_Field::getAsString() was solved
- minor beautifications were done

0.99.6
- a bug with mt_MT locale was fixed
- a complete syntax check was done on all files
- a bug with P4A_DB_Source about multiple join with homonym	fields was fixed

0.99.5
- a bug in P4A_Data_Source was fixed
- a bug with P4A_DB_Source::__sleep was fixed
- polish translation was added (thanks to Artur Stuczyński)
- a bug with P4A_Field::getAsRadio() was fixed

0.99.4
- tinyFCK updated to 0.10
- a bug with rich textarea upload was fixed
- a bug with null dates/numbers formatting was fixed
- XHTML width/height for P4A_Button were restored
- now P4A_Button::setSize() supports width and height with WIDTHxHEIGHT format
- a minor bugfix on P4A_Table CSS was made

0.99.3
- indonesian translation added (thanks to Akhmad Daniel Sembiring)
- japanese translation added (thanks to Tony Kimball)
- P4A_DB_Source now correctly handle multiordering/multipk
- fixed a bug that prevented the DHTML calendar to show correctly
- fixed a bug with P4A_DB_Source::setPageLimit(0)
- some documentation fixes were done

0.99.2
- chinese translation was added (thanks to Tony Kimball)
- bugfix on XHTML validation for P4A_Field::getAsDate()
- removed scrollbar's css for better css validation
- P4A_Widget::noUseTemplate() was removed because wrong, you can do P4A_Widget::useTemplate(false) instead
- P4A_Widget::clearDisplay() was renamed to P4A_Widget::clearTemplateVars()
- PEAR was updated to 1.4.8
- P4A_Table now implements the <COL> tag, resulting HTML was cleaned up

0.99.1
- the "new" icon was changes from "pencil" to "document"
- getAsMulticheckbox now rendered with checkbox + label