@@ -1,0 +1,92 @@
+﻿<?php
+
+/**
+ * P4A - PHP For Applications.
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License version 2
+ * as published by the Free Software Foundation.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ *
+ * To contact the authors write to:									<br>
+ * CreaLabs															<br>
+ * Via Medail, 32													<br>
+ * 10144 Torino (Italy)												<br>
+ * Web:    {@link http://www.crealabs.it}							<br>
+ * E-mail: {@link mailto:info@crealabs.it info@crealabs.it}
+ *
+ * The latest version of p4a can be obtained from:
+ * {@link http://p4a.sourceforge.net}
+ *
+ * @link http://p4a.sourceforge.net
+ * @link http://www.crealabs.it
+ * @link mailto:info@crealabs.it info@crealabs.it
+ * @copyright CreaLabs
+ * @license http://www.gnu.org/licenses/gpl.html GNU General Public License
+ * @author Fabrizio Balliano <fabrizio.balliano@crealabs.it>
+ * @author Andrea Giardina <andrea.giardina@crealabs.it>
+ * @package p4a
+ */
+
+$messages = array
+(
+	// Date
+    "days"				=> array('Søndag' , 'Mandag' , 'Tirsdag' , 'Onsdag' , 'Torsdag' , 'Fredag' , 'Lørdag'),
+	"months"			=> array('Januar', 'Februar', 'Marts', 'April', 'Maj', 'Juni', 'Juli', 'August', 'September', 'Oktober', 'November', 'December'),
+
+	// Standard Toolbar
+	"save"				=> "Bekræft og gem",
+	"cancel"			=> "Fortryd denne handling",
+	"new"				=> "Indsæt ny optegnelse",
+	"delete"			=> "Slet denne optegnelse",
+	"print"				=> "Print",
+	"exit"				=> "Exit",
+	"first"				=> "Gå til det første element",
+	"prev"				=> "Gå til det forige element",
+	"next"				=> "Gå til næste element",
+	"last"				=> "Gå til sidste element",
+	"first_page"	 	=> "Gå til første side",
+	"prev_page"			=> "Gå til forige side",
+	"next_page"			=> "Gå til næste side",
+	"last_page"			=> "Gå til sidste side",
+	"go"				=> "Gå",
+
+	// Table
+	"current_page"		=> "Side",
+	"of_pages"			=> "af",
+	"go_to_page"		=> "Gå til side",
+	"ascending"			=> "Stigende",
+	"descending"		=> "Faldende",
+	"selected"			=> "Valgte",
+
+	// File uploads
+	"filename"			=> "Navn",
+	"filesize"			=> "Størrelse",
+	"filetype"			=> "Type",
+	"filepreview"		=> "Preview",
+	"filedelete"		=> "Slet",
+	"filedownload"		=> "Download",
+
+	// Fields
+	"none_selected"		=> "Ingen valgt",
+
+	// Confirmations
+	"confirm_general"	=> "Er du sikker?",
+	"confirm_confirm"	=> "Bekræft og gem?",
+	"confirm_cancel"	=> "Fortryd denne handling?",
+	"confirm_delete"	=> "Slet denne optegnelse?",
+
+	// Yes/No
+	"yes"				=> "Ja",
+	"no"				=> "Nej"
+);
+
+?>
