@@ -1,7 +1,9 @@
 0.99.8
 - a bugfix about P4A_Date::unformat was fixed (1468679 - string padding)
 - Polish translation was updated
+- Danish translation was added (thank to spinello)
 - PEAR was updated to 1.4.9
+- some minor bugfixes were made
 
 0.99.7
 - added a "clone" function to emulate php5 cloning system
